--- a/app/src/main/res/layout/stage_entries_child_adapter.xml
+++ b/app/src/main/res/layout/stage_entries_child_adapter.xml
@@ -43,6 +43,7 @@
             android:lineSpacingExtra="@dimen/_5sdp"
             android:padding="@dimen/_2sdp"
             android:text="@{data.name}"
+            android:onClick="@{()->viewModel.showStageEntryChildOptionsDeleteSheet(data,stageDetails)}"
             android:textColor="?attr/title_text_color"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -59,6 +60,7 @@
             android:lineSpacingExtra="@dimen/_5sdp"
             android:padding="@dimen/_2sdp"
             android:text="@{data.getDate()}"
+            android:onClick="@{()->viewModel.showStageEntryChildOptionsDeleteSheet(data,stageDetails)}"
             android:textColor="?attr/title_text_color"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -72,6 +74,7 @@
             android:elegantTextHeight="true"
             android:letterSpacing="0.1"
             android:padding="@dimen/_2sdp"
+            android:onClick="@{()->viewModel.showStageEntryChildOptionsDeleteSheet(data,stageDetails)}"
             android:text="@{`Count - `+data.count}"
             android:textColor="?attr/title_text_color"
             android:textStyle="bold"
@@ -89,6 +92,7 @@
             android:elegantTextHeight="true"
             android:letterSpacing="0.1"
             android:padding="@dimen/_2sdp"
+            android:onClick="@{()->viewModel.showStageEntryChildOptionsDeleteSheet(data,stageDetails)}"
             android:text="@{`Total Price - `+data.totalPrice}"
             android:textColor="?attr/title_text_color"
             android:textStyle="bold"
@@ -126,6 +130,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_1sdp"
+            android:onClick="@{()->viewModel.showStageEntryChildOptionsDeleteSheet(data,stageDetails)}"
             android:background="?attr/background_color"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
